--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">A Importância da Automação de Atividades Repetitivas</h3>
                     <p class="text-gray-600">Automatizar atividades repetitivas dentro da empresa permite que sua equipe foque em tarefas mais estratégicas, aumentando a produtividade e reduzindo erros. Com a automação, processos são executados de maneira consistente e eficiente, liberando tempo para a inovação e o crescimento.</p>
-                    <a href="#" class="mt-4 inline-block font-semibold" style="color: #083248;">Ler Mais</a>
+<!--                     <a href="#" class="mt-4 inline-block font-semibold" style="color: #083248;">Ler Mais</a> -->
                 </div>
                 <!-- Card 2 -->
                 <div class="bg-white p-6 rounded-lg shadow-lg text-left">
@@ -76,7 +76,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">Como a Inteligência Artificial Reduz Gastos e Dinamiza o Trabalho</h3>
                     <p class="text-gray-600">A inteligência artificial pode cortar gastos operacionais significativamente ao otimizar processos, prever falhas e melhorar a tomada de decisões. Ela também dinamiza o trabalho ao fornecer insights valiosos e automatizar tarefas complexas, permitindo uma resposta mais rápida e precisa às demandas do mercado.</p>
-                    <a href="#" class="mt-4 inline-block font-semibold" style="color: #083248;">Ler Mais</a>
+<!--                     <a href="#" class="mt-4 inline-block font-semibold" style="color: #083248;">Ler Mais</a> -->
                 </div>
                 <!-- Card 3 -->
                 <div class="bg-white p-6 rounded-lg shadow-lg text-left">
@@ -90,7 +90,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">A Importância de Técnicas Modernas de Marketing e Gestão</h3>
                     <p class="text-gray-600">Utilizar técnicas de marketing e gestão validadas e atuais é crucial para o crescimento saudável da empresa. Elas ajudam a alcançar o público-alvo de maneira eficaz, otimizar recursos, melhorar o engajamento com os clientes e adaptar-se rapidamente às mudanças do mercado. Com uma estratégia bem-definida, sua empresa pode crescer de forma sustentável e competitiva.</p>
-                    <a href="#" class="mt-4 inline-block font-semibold" style="color: #083248;">Ler Mais</a>
+<!--                     <a href="#" class="mt-4 inline-block font-semibold" style="color: #083248;">Ler Mais</a> -->
                 </div>
             </div>
         </div>
