--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
-                    <img src="assets/logotype.png" alt="Youse Logo" class="h-20">
+                    <img src="assets/YOUSE_Governance_Token.svg" alt="Youse Logo" class="h-20">
                     <!-- <span class="ml-2 text-xl font-semibold text-yellow-500">Youse</span> -->
                 </div>
                 <div class="hidden md:flex space-x-6">
