--- a/index.html
+++ b/index.html
@@ -324,20 +324,20 @@
             <!-- Testimonial 1 -->
             <div class="testimonial bg-gray-800 p-8 rounded-lg shadow-lg">
                 <div class="quote">
-                    <p class="italic">“A Youse transformou a forma como gerenciamos nossos dados e automações, permitindo-nos focar no crescimento do negócio.”</p>
+                    <p class="italic">“A Youse transformou a forma como gerenciamos nossos dados e automações! Nos permitiu focar na criatividade do processo.”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
                     <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
                     <div class="profile-info ml-4">
-                        <p class="name font-bold">João Silva</p>
-                        <p class="company">CEO, Tech Solutions</p>
+                        <p class="name font-bold">Tereza Cristina</p>
+                        <p class="company">Assistente Administrativa</p>
                     </div>
                 </div>
             </div>
             <!-- Testimonial 2 -->
             <div class="testimonial bg-gray-800 p-8 rounded-lg shadow-lg">
                 <div class="quote">
-                    <p class="italic">“Excelente serviço de consultoria de marketing! Vimos nossos resultados decolarem após começar a trabalhar com a Youse.”</p>
+                    <p class="italic">“Excelente serviço de consultoria de marketing! Vimos nossos resultados decolarem.”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
                     <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
@@ -353,12 +353,12 @@
             <!-- Testimonial 1 -->
             <div class="testimonial bg-gray-800 p-8 rounded-lg shadow-lg">
                 <div class="quote">
-                    <p class="italic">“A Youse transformou a forma como gerenciamos nossos dados e automações, permitindo-nos focar no crescimento do negócio.”</p>
+                    <p class="italic">“Ótimo serviço. Muito profissionais. Conseguem fornecer soluções rápidas, fáceis e úteis.”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
                     <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
                     <div class="profile-info ml-4">
-                        <p class="name font-bold">João Silva</p>
+                        <p class="name font-bold">João Policarpo</p>
                         <p class="company">CEO, Tech Solutions</p>
                     </div>
                 </div>
@@ -366,13 +366,13 @@
             <!-- Testimonial 2 -->
             <div class="testimonial bg-gray-800 p-8 rounded-lg shadow-lg">
                 <div class="quote">
-                    <p class="italic">“Excelente serviço de consultoria de marketing! Vimos nossos resultados decolarem após começar a trabalhar com a Youse.”</p>
+                    <p class="italic">“Automação é a nova moda! Depois que automatizamos parte do processo ficou muito mais fácil gerir toda a operação. Parabéns a Youse!”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
                     <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
                     <div class="profile-info ml-4">
-                        <p class="name font-bold">Maria Oliveira</p>
-                        <p class="company">Diretora de Marketing, Inova Ltda</p>
+                        <p class="name font-bold">Dilvoney Souza</p>
+                        <p class="company">Gerente de Processos, Loja Limpa&Arrumada</p>
                     </div>
                 </div>
             </div>
