--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
                     <p class="italic">“A Youse transformou a forma como gerenciamos nossos dados e automações! Nos permitiu focar na criatividade do processo.”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
-                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
+                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0">
+                        <img src="assets/review_1.jpg">
+                    </div>
                     <div class="profile-info ml-4">
                         <p class="name font-bold">Tereza Cristina</p>
                         <p class="company">Assistente Administrativa</p>
@@ -340,7 +342,9 @@
                     <p class="italic">“Excelente serviço de consultoria de marketing! Vimos nossos resultados decolarem.”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
-                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
+                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0">
+                        <img src="assets/review_4.jpg">
+                    </div>
                     <div class="profile-info ml-4">
                         <p class="name font-bold">Maria Oliveira</p>
                         <p class="company">Diretora de Marketing, Inova Ltda</p>
@@ -356,7 +360,9 @@
                     <p class="italic">“Ótimo serviço. Muito profissionais. Conseguem fornecer soluções rápidas, fáceis e úteis.”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
-                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
+                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0">
+                        <img src="assets/review_2.jpg">
+                    </div>
                     <div class="profile-info ml-4">
                         <p class="name font-bold">João Policarpo</p>
                         <p class="company">CEO, Tech Solutions</p>
@@ -369,7 +375,9 @@
                     <p class="italic">“Automação é a nova moda! Depois que automatizamos parte do processo ficou muito mais fácil gerir toda a operação. Parabéns a Youse!”</p>
                 </div>
                 <div class="profile mt-4 flex items-center">
-                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0"></div>
+                    <div class="photo-placeholder bg-yellow-500 w-12 h-12 rounded-full flex-shrink-0">
+                        <img src="assets/review_3.jpg">
+                    </div>
                     <div class="profile-info ml-4">
                         <p class="name font-bold">Dilvoney Souza</p>
                         <p class="company">Gerente de Processos, Loja Limpa&Arrumada</p>
