Privacy policy page implemented.

--- a/pages/policy.html
+++ b/pages/policy.html
@@ -9,5 +9,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
-    Privacy Policy
+    <section class="hero-bg bg-gray-800 bg-opacity-50 flex items-center justify-center">
+        <div class="container mx-auto flex flex-wrap justify-between">
+            <!-- <div class="container mx-auto logotype-position">
+                <img src="assets/logotype_transparent.png" alt="Youse Logo" class="mb-4 logotype-img">
+
+            </div> -->
+            <div class="container mx-auto text-center">
+                <h1 class="text-4xl font-semibold text-white">Transformando a vida de consultores!</h1>
+                <p class="mt-4 text-gray-300">Melhore sua consultoria e escale seus atendimentos com sistemas inteligentes ultra personalizados.</p>
+                <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" target="_blank" class="mt-8 inline-block bg-yellow-500 text-gray-900 py-3 px-6 rounded-md hover:bg-yellow-600">Entre em Contato</a>
+            </div>
+        </div>
+    </section>
 </body>
