--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="animation.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/animation.css">
+    <link rel="shortcut icon" type="imagex/svg" href="assets/YOUSE_Governance_Token.svg">
     <title>Youse - Soluções Inteligentes</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -19,10 +20,12 @@
                     <!-- <span class="ml-2 text-xl font-semibold text-yellow-500">Youse</span> -->
                 </div>
                 <div class="hidden md:flex space-x-6">
-                    <a href="#" class="text-white hover:text-yellow-500">Home</a>
-                    <!-- <a href="#" class="text-gray-400 hover:text-yellow-500">Sobre</a>
-                    <a href="#" class="text-gray-400 hover:text-yellow-500">Serviços</a>
-                    <a href="#" class="text-gray-400 hover:text-yellow-500">Blog</a>
+                    <a href="#" class="text-white hover:text-yellow-500">Início</a>
+                    <a href="pages/sobre.html" class="text-gray-400 hover:text-yellow-500">Sobre</a>
+                    <a href="pages/policy.html" class="text-gray-400 hover:text-yellow-500">Política de Privacidade</a>
+                    <a href="pages/cookies.html" class="text-gray-400 hover:text-yellow-500">Política de Cookies</a>
+                    <a href="pages/faq.html" class="text-gray-400 hover:text-yellow-500">FAQ</a>
+                    <!--<a href="#" class="text-gray-400 hover:text-yellow-500">Blog</a>
                     <a href="#" class="text-gray-400 hover:text-yellow-500">Contato</a> -->
                 </div>
                 <div class="hidden md:flex items-center space-x-3">
@@ -31,15 +34,6 @@
                             <path d="M21.207 18.793A11.958 11.958 0 0024 12C24 5.383 18.617 0 12 0 5.383 0 0 5.383 0 12c0 2.07.526 4.06 1.518 5.829l-1.383 5.356a1 1 0 001.219 1.219l5.356-1.383A11.956 11.956 0 0012 24c6.617 0 12-5.383 12-12 0-.797-.073-1.583-.207-2.357A1 1 0 0021.207 18.793zM12 22a10.002 10.002 0 01-5.378-1.581l-3.593.924.924-3.593A9.984 9.984 0 012 12C2 6.477 6.477 2 12 2s10 4.477 10 10c0 5.523-4.477 10-10 10zm5.707-7.293A1 1 0 0018 14V9a1 1 0 00-1-1h-5a1 1 0 100 2h2.586l-5.707 5.707a1 1 0 101.414 1.414L14 11.414V14a1 1 0 001 1h2.586l1.707 1.707a1 1 0 101.414-1.414L17.707 14.707zm-9.414-5.414A1 1 0 109 8.586L7.293 10.293A1 1 0 108.707 11.707L10 10.414V13a1 1 0 102 0V9a1 1 0 10-2 0v2.586l-1.293-1.293z"></path>
                         </svg>
                         <span>(31) 99551-8294</span>
-                    </a>
-                </div>
-                <div class="hidden md:flex items-center space-x-3">
-                    <!-- <a href="https://yousesol.github.io/Youse/pages/policy.html" class="text-gray-400 hover:text-green-500" target="_blank" rel="noopener noreferrer"> -->
-                    <a href="pages/policy.html" class="text-gray-400 hover:text-green-500" target="_blank" rel="noopener noreferrer">
-                        <svg class="w-6 h-6 inline-block mr-2" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M21.207 18.793A11.958 11.958 0 0024 12C24 5.383 18.617 0 12 0 5.383 0 0 5.383 0 12c0 2.07.526 4.06 1.518 5.829l-1.383 5.356a1 1 0 001.219 1.219l5.356-1.383A11.956 11.956 0 0012 24c6.617 0 12-5.383 12-12 0-.797-.073-1.583-.207-2.357A1 1 0 0021.207 18.793zM12 22a10.002 10.002 0 01-5.378-1.581l-3.593.924.924-3.593A9.984 9.984 0 012 12C2 6.477 6.477 2 12 2s10 4.477 10 10c0 5.523-4.477 10-10 10zm5.707-7.293A1 1 0 0018 14V9a1 1 0 00-1-1h-5a1 1 0 100 2h2.586l-5.707 5.707a1 1 0 101.414 1.414L14 11.414V14a1 1 0 001 1h2.586l1.707 1.707a1 1 0 101.414-1.414L17.707 14.707zm-9.414-5.414A1 1 0 109 8.586L7.293 10.293A1 1 0 108.707 11.707L10 10.414V13a1 1 0 102 0V9a1 1 0 10-2 0v2.586l-1.293-1.293z"></path>
-                        </svg>
-                        <span>Politica de Privacidade</span>
                     </a>
                 </div>
             </div>
@@ -56,7 +50,7 @@
             <div class="container mx-auto text-center">
                 <h1 class="text-4xl font-semibold text-white">Transformando a vida de consultores!</h1>
                 <p class="mt-4 text-gray-300">Melhore sua consultoria e escale seus atendimentos com sistemas inteligentes ultra personalizados.</p>
-                <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" target="_blank" class="mt-8 inline-block bg-yellow-500 text-gray-900 py-3 px-6 rounded-md hover:bg-yellow-600">Entre em Contato</a>
+                <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" target="_blank" class="mt-8 inline-block bg-yellow-500 text-gray-900 py-3 px-6 rounded-md hover:bg-yellow-600">Consulte de Graça!</a>
             </div>
         </div>
     </section>
@@ -372,7 +366,7 @@
             </div>
         </div>
         <div class="text-center mt-12">
-            <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" target="_blank" class="bg-yellow-500 text-gray-900 py-3 px-8 rounded-md hover:bg-yellow-600">Entre em Contato</a>
+            <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" target="_blank" class="bg-yellow-500 text-gray-900 py-3 px-8 rounded-md hover:bg-yellow-600">Consulte de Graça!</a>
         </div>
     </section>
 
@@ -396,7 +390,8 @@
                         <img src="assets/visagismo.png" alt="Results" class="mx-auto mb-4">
                         <h2 class="text-xl font-semibold">Análise de Visagismo com Inteligência Artificial</h2>
                     </div>
-                    <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" class="text-blue-500 font-semibold" target="_blank">Mais</a>
+                    <!-- <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" class="text-blue-500 font-semibold" target="_blank">Mais</a> -->
+                    <a href="pages/visagism_product.html" class="text-blue-500 font-semibold" target="_blank">Mais</a>
                 </div>
 
                 <div class="bg-white shadow-md rounded-lg p-6">
