--- a/pages/policy.html
+++ b/pages/policy.html
@@ -3,8 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="shortcut icon" type="imagex/svg" href="../assets/YOUSE_Governance_Token.svg">
     <title>Youse - Privacy Policy</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
-    <p>Policy</p>
+    <nav class="shadow-lg" style="background-color: #161619;">
+        <div class="container mx-auto px-6 py-3">
+            <div class="flex justify-between items-center">
+                <div class="flex items-center">
+                    <img src="../assets/YOUSE_Governance_Token.svg" alt="Youse Logo" class="h-20">
+                    <!-- <span class="ml-2 text-xl font-semibold text-yellow-500">Youse</span> -->
+                </div>
+                <div class="hidden md:flex space-x-6">
+                    <a href="../index.html" class="text-gray-400 hover:text-yellow-500">Início</a>
+                    <a href="sobre.html" class="text-gray-400 hover:text-yellow-500">Sobre</a>
+                    <a href="policy.html" class="text-white hover:text-yellow-500">Política de Privacidade</a>
+                    <a href="cookies.html" class="text-gray-400 hover:text-yellow-500">Política de Cookies</a>
+                    <a href="faq.html" class="text-gray-400 hover:text-yellow-500">FAQ</a>
+
+                    <!--<a href="#" class="text-gray-400 hover:text-yellow-500">Blog</a>
+                    <a href="#" class="text-gray-400 hover:text-yellow-500">Contato</a> -->
+                </div>
+                <div class="hidden md:flex items-center space-x-3">
+                    <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" class="text-gray-400 hover:text-green-500" target="_blank" rel="noopener noreferrer">
+                        <svg class="w-6 h-6 inline-block mr-2" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M21.207 18.793A11.958 11.958 0 0024 12C24 5.383 18.617 0 12 0 5.383 0 0 5.383 0 12c0 2.07.526 4.06 1.518 5.829l-1.383 5.356a1 1 0 001.219 1.219l5.356-1.383A11.956 11.956 0 0012 24c6.617 0 12-5.383 12-12 0-.797-.073-1.583-.207-2.357A1 1 0 0021.207 18.793zM12 22a10.002 10.002 0 01-5.378-1.581l-3.593.924.924-3.593A9.984 9.984 0 012 12C2 6.477 6.477 2 12 2s10 4.477 10 10c0 5.523-4.477 10-10 10zm5.707-7.293A1 1 0 0018 14V9a1 1 0 00-1-1h-5a1 1 0 100 2h2.586l-5.707 5.707a1 1 0 101.414 1.414L14 11.414V14a1 1 0 001 1h2.586l1.707 1.707a1 1 0 101.414-1.414L17.707 14.707zm-9.414-5.414A1 1 0 109 8.586L7.293 10.293A1 1 0 108.707 11.707L10 10.414V13a1 1 0 102 0V9a1 1 0 10-2 0v2.586l-1.293-1.293z"></path>
+                        </svg>
+                        <span>(31) 99551-8294</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container mx-auto p-8 bg-white shadow-md rounded-lg">
+        <h1 class="text-3xl font-bold mb-4 text-center">Política de Privacidade</h1>
+        <p class="mb-4"><strong>Versão:</strong> 2.0<br><strong>Data de Atualização:</strong> 02 de agosto de 2024</p>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">1. Introdução</h2>
+            <p>A Youse Soluções Inteligentes respeita a sua privacidade e se compromete a proteger seus dados pessoais. Esta política de privacidade descreve como tratamos e protegemos seus dados pessoais quando você utiliza nossos serviços de software online, em conformidade com a Lei Geral de Proteção de Dados Pessoais (LGPD).</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">2. Informações sobre a Organização</h2>
+            <p>A Youse Soluções Inteligentes é a responsável pelo tratamento de dados pessoais. Caso tenha qualquer dúvida sobre esta política, entre em contato conosco.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">3. Dados Pessoais Coletados e Finalidades</h2>
+            <p>Coletamos diferentes tipos de dados pessoais com as seguintes finalidades:</p>
+            <ul class="list-disc list-inside pl-4">
+                <li><strong>Dados de Identificação:</strong> Nome, e-mail, telefone – para contato e suporte ao cliente.</li>
+                <li><strong>Dados de Uso:</strong> Endereço IP, localização, histórico de navegação – para melhorar nossos serviços e oferecer uma experiência personalizada.</li>
+            </ul>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">4. Base Jurídica para Tratamento</h2>
+            <p>O tratamento de seus dados pessoais é realizado com base nas seguintes justificativas legais:</p>
+            <ul class="list-disc list-inside pl-4">
+                <li>Execução de contrato</li>
+                <li>Consentimento do titular dos dados</li>
+                <li>Interesses legítimos da empresa</li>
+            </ul>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">5. Retenção de Dados</h2>
+            <p>Seus dados pessoais serão retidos pelo período necessário para cumprir as finalidades descritas nesta política, a menos que um período de retenção mais longo seja exigido ou permitido por lei.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">6. Direitos dos Titulares dos Dados</h2>
+            <p>Você possui os seguintes direitos em relação aos seus dados pessoais:</p>
+            <ul class="list-disc list-inside pl-4">
+                <li>Acesso aos seus dados</li>
+                <li>Correção de dados incompletos, inexatos ou desatualizados</li>
+                <li>Solicitação de anonimização, bloqueio ou eliminação de dados desnecessários, excessivos ou tratados em desconformidade com a lei</li>
+                <li>Revogação do consentimento</li>
+                <li>Informação sobre compartilhamento de dados com terceiros</li>
+                <li>Portabilidade dos dados a outro fornecedor de serviço ou produto</li>
+            </ul>
+            <p>Para exercer seus direitos, entre em contato com nosso Encarregado de Proteção de Dados.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">7. Compartilhamento de Dados com Terceiros</h2>
+            <p>Seus dados podem ser compartilhados com terceiros nas seguintes circunstâncias:</p>
+            <ul class="list-disc list-inside pl-4">
+                <li>Com nossos prestadores de serviços, para execução de atividades em nosso nome</li>
+                <li>Em casos de fusão, aquisição ou venda de ativos da empresa</li>
+                <li>Para cumprimento de obrigações legais</li>
+            </ul>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">8. Transferência Internacional de Dados</h2>
+            <p>Seus dados podem ser transferidos e armazenados fora do Brasil. Garantimos que essas transferências serão realizadas em conformidade com a LGPD.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">9. Segurança dos Dados</h2>
+            <p>Implementamos medidas de segurança apropriadas para proteger seus dados pessoais contra acesso, alteração, divulgação ou destruição não autorizada.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">10. Cookies</h2>
+            <p>Utilizamos cookies para melhorar sua experiência em nosso site. Para mais informações, consulte nossa <a href="cookies.html" class="text-blue-500 underline">Política de Cookies</a>.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">11. Dados de Menores de Idade</h2>
+            <p>Nossos serviços não são destinados a menores de 18 anos e não coletamos intencionalmente dados pessoais de menores.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">12. Decisões Automatizadas</h2>
+            <p>Não utilizamos decisões automatizadas que possam impactar seus direitos.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">13. Alterações a Esta Política de Privacidade</h2>
+            <p>Podemos atualizar esta política periodicamente. Notificaremos você sobre quaisquer alterações publicando a nova política nesta página. Recomendamos que revise esta política regularmente.</p>
+        </section>
+
+        <section class="mb-6">
+            <h2 class="text-2xl font-semibold mb-2">14. Contato</h2>
+            <p>Para quaisquer dúvidas ou solicitações relacionadas a esta política, entre em contato com nosso Encarregado de Proteção de Dados:</p>
+            <ul class="list-none pl-0">
+                <li><strong>Nome:</strong> Guilherme Bittencourt</li>
+                <li><strong>E-mail:</strong> guilherme@weblab.academy</li>
+                <li><strong>Telefone:</strong> (31) 99718-6125</li>
+            </ul>
+        </section>
+    </div>
+
+    <!-- Footer -->
+    <footer class="text-white p-12" style="background-color: #161619;">
+        <div class="container mx-auto flex flex-wrap justify-between">
+            <div class="w-full md:w-1/4 mb-8 md:mb-0">
+                <img src="../assets/logotype.png" alt="Youse Logo" class="w-32 mb-4">
+                <p>Soluções computacionais úteis, fáceis e objetivas usando as máquinas para trabalhar conosco e para nós.</p>
+            </div>
+            <!-- <div class="w-full md:w-1/4 mb-8 md:mb-0">
+                <h3 class="font-bold mb-4">Downloads</h3>
+                <ul>
+                    <li><a href="#" class="hover:underline">App para Windows</a></li>
+                    <li><a href="#" class="hover:underline">App para MacOS</a></li>
+                    <li><a href="#" class="hover:underline">App para Linux</a></li>
+                </ul>
+            </div> -->
+            <div class="w-full md:w-1/4 mb-8 md:mb-0">
+                <h3 class="font-bold mb-4">Empresa</h3>
+                <ul>
+                    <li><a href="#" class="hover:underline">Sobre Nós</a></li>
+                    <li><a href="#" class="hover:underline">Carreiras</a></li>
+                    <li><a href="#" class="hover:underline">Blog</a></li>
+                </ul>
+            </div>
+            <div class="w-full md:w-1/4 mb-8 md:mb-0">
+                <h3 class="font-bold mb-4">Social</h3>
+                <ul class="flex space-x-4">
+                    <li><a href="https://www.linkedin.com/company/yousecomputer-solutions/about/" target="_blank" class="hover:underline">LinkedIn</a></li>
+                    <li><a href="https://www.instagram.com/yousesolutions/" target="_blank" class="hover:underline">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=61559805596273" target="_blank" class="hover:underline">Facebook</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-8 text-center text-gray-500">
+            <p>&copy; 2024 Youse. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
