--- a/pages/corporal_analysis_product.html
+++ b/pages/corporal_analysis_product.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <link rel="shortcut icon" type="imagex/svg" href="../assets/YOUSE_Governance_Token.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMKtTTjslNV3lzVd9rhNo5xugkQ/24ojJD3qz8" crossorigin="anonymous">
-    <title>Youse - Sobre Nós</title>
+    <title>Youse - Análise Corporal Automática</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
@@ -66,20 +66,13 @@
         });
     </script>
 
-<!-- Header -->
-<!-- <header class="bg-white text-white py-6">
-    <div class="container mx-auto text-center">
-        <h1 class="text-4xl font-semibold">Análise de Visagismo Automática</h1>
-    </div>
-</header> -->
-
 <!-- Product Image -->
 <section class="bg-[#161619] py-12">
     <div class="container mx-auto text-center text-gray-100 mb-16">
-        <h1 class="text-4xl font-semibold ">Análise de Visagismo Automática</h1>
+        <h1 class="text-4xl font-semibold">Análise Corporal Automática</h1>
     </div>
     <div class="container mx-auto text-center">
-        <img src="../assets/visagismo.png" alt="Produto - Análise de Visagismo Automática" class="mx-auto rounded-lg shadow-lg">
+        <img src="../assets/corporal.png" alt="Produto - Análise Corporal Automática" class="mx-auto rounded-lg shadow-lg">
     </div>
 </section>
 
@@ -88,93 +81,92 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
             <div class="text-center md:text-left mb-12 md:mb-0">
                 <h2 class="text-3xl font-semibold text-gray-900">Sobre o Produto</h2>
-                <p class="mt-4 text-gray-600">A Análise de Visagismo Automática é uma solução inovadora para barbeiros e cabeleireiras. Utilizando inteligência artificial, nosso produto oferece recomendações personalizadas para cada cliente, ajudando a realçar sua beleza natural e estilo único.</p>
+                <p class="mt-4 text-gray-600">A Análise Corporal Automática é uma ferramenta revolucionária que utiliza inteligência artificial para entender as dores que você teve na infância e como isso influencia suas habilidades na vida adulta. Nosso sistema ajuda a melhorar seus estudos, trabalho e relacionamento, proporcionando uma análise detalhada do seu corpo e suas necessidades.</p>
             </div>
             <div class="flex justify-center md:justify-end">
-                <img src="../assets/Visagismo2.png" alt="Imagem do Produto" class="w-full md:w-2/3 lg:w-1/2 rounded-lg shadow-lg">
+                <img src="../assets/corp_ex.webp" alt="Imagem do Produto" class="w-full md:w-2/3 lg:w-1/2 rounded-lg shadow-lg">
             </div>
         </div>
     </div>
 </section>
 
-    <!-- Benefits of the Product -->
-    <section class="bg-[#161619] py-16">
-        <div class="container mx-auto px-6">
-            <div class="text-center mb-16">
-                <h2 class="text-3xl font-semibold text-gray-100">Benefícios do Produto</h2>
-                <p class="mt-4 text-gray-300">Descubra os incríveis benefícios da nossa Análise de Visagismo Automática:</p>
+<!-- Benefits of the Product -->
+<section class="bg-[#161619] py-16">
+    <div class="container mx-auto px-6">
+        <div class="text-center mb-16">
+            <h2 class="text-3xl font-semibold text-gray-100">Benefícios do Produto</h2>
+            <p class="mt-4 text-gray-300">Descubra os incríveis benefícios da nossa Análise Corporal Automática:</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
+                <div class="mb-4">
+                    <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                        <!-- SVG content for a personalized analysis icon -->
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 12c2.21 0 4-.79 4-1.75S14.21 8.5 12 8.5 8 9.29 8 10.25 9.79 12 12 12zm-5.35.65c-.3-.19-.65-.1-.85.2-.19.3-.1.65.2.85 1.13.69 2.68 1.15 4.35 1.15s3.22-.46 4.35-1.15c.3-.19.39-.54.2-.85-.2-.3-.55-.39-.85-.2-.92.57-2.21.9-3.7.9-1.49 0-2.78-.33-3.7-.9zM12 4C6.48 4 2 8.48 2 14s4.48 10 10 10 10-4.48 10-10S17.52 4 12 4zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>
+                    </svg>
+                </div>
+                <h3 class="text-xl font-semibold text-gray-100 mb-2">Recomendações Personalizadas</h3>
+                <p class="text-gray-300">Obtenha recomendações específicas para melhorar suas atividades diárias.</p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
-                    <div class="mb-4">
-                        <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
-                            <!-- SVG content for a scissors icon -->
-                            <path d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M9.64 7.64l-.06.06c-.29.29-.77.29-1.06 0l-.83-.83c-.29-.29-.29-.77 0-1.06l.06-.06c.29-.29.77-.29 1.06 0l.83.83c.29.29.29.77 0 1.06zm8.02 8.02c-.29-.29-.77-.29-1.06 0l-.83.83c-.29.29-.29.77 0 1.06l.06.06c.29.29.77.29 1.06 0l.83-.83c.29-.29.29-.77 0-1.06l-.06-.06zm.47-5.33c-.49 0-.89.4-.89.89s.4.89.89.89.89-.4.89-.89-.4-.89-.89-.89zm3.41 2.67l-2.67-2.67c-.39-.39-1.02-.39-1.41 0l-.08.08c-.78-.3-1.64-.48-2.52-.48-1.33 0-2.6.52-3.54 1.46L4.81 3.28c-.39-.39-1.02-.39-1.41 0l-.08.08c-.39.39-.39 1.02 0 1.41l6.41 6.41-4.97 4.97c-.39.39-.39 1.02 0 1.41l.08.08c.39.39 1.02.39 1.41 0l4.97-4.97 6.41 6.41c.39.39 1.02.39 1.41 0l.08-.08c.39-.39.39-1.02 0-1.41l-6.41-6.41c.94-.94 1.46-2.21 1.46-3.54 0-.88-.17-1.74-.48-2.52l.08-.08c.39-.39.39-1.02 0-1.41z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-100 mb-2">Recomendações Personalizadas</h3>
-                    <p class="text-gray-300">Recomendações personalizadas de cortes e estilos.</p>
+            <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
+                <div class="mb-4">
+                    <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                        <!-- SVG content for relationship icon -->
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M19 13H5v-2h14v2z"/>
+                    </svg>
                 </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
-                    <div class="mb-4">
-                        <svg class="w-16 h-16 text-blue-400 mx-auto" fill="currentColor" viewBox="0 0 24 24">
-                            <!-- SVG content for a smile icon -->
-                            <path d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M12 12c2.21 0 4-.79 4-1.75S14.21 8.5 12 8.5 8 9.29 8 10.25 9.79 12 12 12zm-5.35.65c-.3-.19-.65-.1-.85.2-.19.3-.1.65.2.85 1.13.69 2.68 1.15 4.35 1.15s3.22-.46 4.35-1.15c.3-.19.39-.54.2-.85-.2-.3-.55-.39-.85-.2-.92.57-2.21.9-3.7.9-1.49 0-2.78-.33-3.7-.9zM12 4C6.48 4 2 8.48 2 14s4.48 10 10 10 10-4.48 10-10S17.52 4 12 4zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-100 mb-2">Satisfação e Fidelização</h3>
-                    <p class="text-gray-300">Melhora na satisfação e fidelização dos clientes.</p>
+                <h3 class="text-xl font-semibold text-gray-100 mb-2">Melhore seus Relacionamentos</h3>
+                <p class="text-gray-300">Entenda como as experiências passadas afetam suas interações atuais.</p>
+            </div>
+            <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
+                <div class="mb-4">
+                    <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                        <!-- SVG content for productivity icon -->
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zM8 11h8v2H8z"/>
+                    </svg>
                 </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
-                    <div class="mb-4">
-                        <svg class="w-16 h-16 text-blue-700 mx-auto" fill="currentColor" viewBox="0 0 24 24">
-                            <!-- SVG content for a clock icon -->
-                            <path d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M12 20c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8zm0-18C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm.5 5H11v6l5.25 3.15.75-1.23-4.5-2.67V7z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-100 mb-2">Economia de Tempo</h3>
-                    <p class="text-gray-300">Economia de tempo para profissionais de beleza.</p>
+                <h3 class="text-xl font-semibold text-gray-100 mb-2">Aumente sua Produtividade</h3>
+                <p class="text-gray-300">Melhore seu desempenho no trabalho e nos estudos com insights valiosos.</p>
+            </div>
+            <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
+                <div class="mb-4">
+                    <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                        <!-- SVG content for emotional well-being icon -->
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                    </svg>
                 </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
-                    <div class="mb-4">
-                        <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
-                            <!-- SVG content for a computer icon -->
-                            <path d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M4 5h16v10H4z" opacity=".3"/>
-                            <path d="M20 18l1-2V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v11l1 2H2v2h20v-2h-2zM5 5h14v10H5V5zm7 13h-4v-1h4v1zm5 0h-4v-1h4v1z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-100 mb-2">Interface Intuitiva</h3>
-                    <p class="text-gray-300">Facilidade de uso com interface intuitiva.</p>
+                <h3 class="text-xl font-semibold text-gray-100 mb-2">Bem-Estar Emocional</h3>
+                <p class="text-gray-300">Descubra maneiras de melhorar seu bem-estar emocional e mental.</p>
+            </div>
+            <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
+                <div class="mb-4">
+                    <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                        <!-- SVG content for childhood insights icon -->
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M20 2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 18H4V4h16v16zM10 17l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                    </svg>
                 </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
-                    <div class="mb-4">
-                        <svg class="w-16 h-16 text-blue-400 mx-auto" fill="currentColor" viewBox="0 0 24 24">
-                            <!-- SVG content for a network icon -->
-                            <path d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M4 8.5h4v-2H4V8.5zm0 9.5h4v-2H4v2zm8.5-13.5H16v2h-3.5V4.5zm0 13.5H16v2h-3.5v-2zm8.5-6.5h-7V4h-2v7H4v2h7v7h2v-7h7v-2z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-100 mb-2">Integração</h3>
-                    <p class="text-gray-300">Integração com sistemas de gerenciamento de clientes.</p>
+                <h3 class="text-xl font-semibold text-gray-100 mb-2">Insights da Infância</h3>
+                <p class="text-gray-300">Compreenda as dores da infância e como elas impactam sua vida adulta.</p>
+            </div>
+            <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
+                <div class="mb-4">
+                    <svg class="w-16 h-16 text-pink-500 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                        <!-- SVG content for holistic health icon -->
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 12c2.21 0 4-.79 4-1.75S14.21 8.5 12 8.5 8 9.29 8 10.25 9.79 12 12 12zm-5.35.65c-.3-.19-.65-.1-.85.2-.19.3-.1.65.2.85 1.13.69 2.68 1.15 4.35 1.15s3.22-.46 4.35-1.15c.3-.19.39-.54.2-.85-.2-.3-.55-.39-.85-.2-.92.57-2.21.9-3.7.9-1.49 0-2.78-.33-3.7-.9zM12 4C6.48 4 2 8.48 2 14s4.48 10 10 10 10-4.48 10-10S17.52 4 12 4zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>
+                    </svg>
                 </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center">
-                    <div class="mb-4">
-                        <svg class="w-16 h-16 text-blue-700 mx-auto" fill="currentColor" viewBox="0 0 24 24">
-                            <!-- SVG content for a support icon -->
-                            <path path stroke-linecap="round" stroke-linejoin="round" d="M0 0h24v24H0z" fill="none"/>
-                            <path path stroke-linecap="round" stroke-linejoin="round" d="M12 2c-5.52 0-10 4.48-10 10s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17.93c-3.95.49-7.47-2.57-7.96-6.52-.08-.66-.11-1.33-.11-2 0-1.45.31-2.83.86-4.07.22-.49-.07-1.08-.61-1.11-.63-.04-1.08.52-.92 1.12.62 2.3.55 4.81-.15 7.19-.38 1.32-1.06 2.55-1.94 3.61.89.68 1.94 1.15 3.08 1.38 1.56.32 3.2-.01 4.5-.85.91-.6 1.59-1.43 2.05-2.41.29-.6-.12-1.36-.8-1.4-.54-.04-.96.37-1.02.9-.07.63-.37 1.19-.84 1.58-.66.55-1.48.92-2.35 1.05-1.01.15-2.03-.07-2.9-.6-.6-.35-.87-.99-.68-1.61.15-.49.57-.83 1.07-.85.69-.02 1.31-.37 1.57-1.01.32-.8.95-1.39 1.76-1.64.43-.13.85-.24 1.28-.34.94-.23 1.89-.54 2.83-.92.72-.3 1.42-.67 2.09-1.08-.2-.86-.5-1.68-.88-2.44-1.54.91-3.27 1.65-5.13 2.18-1.47.42-2.99.74-4.54.96-1.12.16-2.26.23-3.41.21-.63-.01-1.26-.05-1.89-.14 1.37-.93 2.65-2.1 3.73-3.38.88-.99 1.69-2.06 2.4-3.18 1.32-2.05 2.27-4.39 2.66-6.85-.43-.09-.86-.16-1.29-.19-4.11-.35-7.93 1.24-10.55 4.13-.29.32-.47.73-.54 1.17-.13.72.07 1.47.55 2.03 1.5 1.74 3.4 3.16 5.54 4.09 1.14.49 2.34.89 3.58 1.17 1.5.34 3.02.53 4.55.57-.29 1.19-.79 2.3-1.48 3.26-.74 1.01-1.65 1.88-2.67 2.57z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-100 mb-2">Suporte</h3>
-                    <p class="text-gray-300">Suporte rápido e eficiente com a nossa equipe.</p>
-                </div>
+                <h3 class="text-xl font-semibold text-gray-100 mb-2">Saúde Holística</h3>
+                <p class="text-gray-300">Aborde sua saúde de forma integral, considerando corpo e mente.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 <section class="bg-white py-12">
     <div class="container mx-auto px-6">
@@ -266,3 +258,4 @@
     </div>
 </footer>
 </body>
+</html>
