--- a/pages/faq.html
+++ b/pages/faq.html
@@ -14,7 +14,6 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
                     <img src="../assets/YOUSE_Governance_Token.svg" alt="Youse Logo" class="h-20">
-                    <!-- <span class="ml-2 text-xl font-semibold text-yellow-500">Youse</span> -->
                 </div>
                 <div class="hidden md:flex space-x-6">
                     <a href="../index.html" class="text-gray-400 hover:text-yellow-500">Início</a>
@@ -22,9 +21,6 @@
                     <a href="policy.html" class="text-gray-400 hover:text-yellow-500">Política de Privacidade</a>
                     <a href="cookies.html" class="text-gray-400 hover:text-yellow-500">Política de Cookies</a>
                     <a href="faq.html" class="text-white hover:text-yellow-500">FAQ</a>
-
-                    <!--<a href="#" class="text-gray-400 hover:text-yellow-500">Blog</a>
-                    <a href="#" class="text-gray-400 hover:text-yellow-500">Contato</a> -->
                 </div>
                 <div class="hidden md:flex items-center space-x-3">
                     <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" class="text-gray-400 hover:text-green-500" target="_blank" rel="noopener noreferrer">
@@ -34,9 +30,40 @@
                         <span>(31) 99551-8294</span>
                     </a>
                 </div>
+                <!-- Mobile menu button -->
+                <div class="md:hidden">
+                    <button id="menu-button" class="text-gray-400 focus:outline-none focus:text-yellow-500">
+                        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <!-- Mobile menu -->
+            <div id="mobile-menu" class="hidden md:hidden mt-4">
+                <a href="../index.html" class="block py-2 text-gray-400 hover:text-yellow-500">Início</a>
+                <a href="sobre.html" class="block py-2 text-gray-400 hover:text-yellow-500">Sobre</a>
+                <a href="policy.html" class="block py-2 text-gray-400 hover:text-yellow-500">Política de Privacidade</a>
+                <a href="cookies.html" class="block py-2 text-gray-400 hover:text-yellow-500">Política de Cookies</a>
+                <a href="faq.html" class="block py-2 text-white hover:text-yellow-500">FAQ</a>
+                <a href="https://wa.me/5531995518294?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Youse%20e%20fazer%20um%20or%C3%A7amento.%20" class="block py-2 text-gray-400 hover:text-green-500" target="_blank" rel="noopener noreferrer">
+                    <svg class="w-6 h-6 inline-block mr-2" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M21.207 18.793A11.958 11.958 0 0024 12C24 5.383 18.617 0 12 0 5.383 0 0 5.383 0 12c0 2.07.526 4.06 1.518 5.829l-1.383 5.356a1 1 0 001.219 1.219l5.356-1.383A11.956 11.956 0 0012 24c6.617 0 12-5.383 12-12 0-.797-.073-1.583-.207-2.357A1 1 0 0021.207 18.793zM12 22a10.002 10.002 0 01-5.378-1.581l-3.593.924.924-3.593A9.984 9.984 0 012 12C2 6.477 6.477 2 12 2s10 4.477 10 10c0 5.523-4.477 10-10 10zm5.707-7.293A1 1 0 0018 14V9a1 1 0 00-1-1h-5a1 1 0 100 2h2.586l-5.707 5.707a1 1 0 101.414 1.414L14 11.414V14a1 1 0 001 1h2.586l1.707 1.707a1 1 0 101.414-1.414L17.707 14.707zm-9.414-5.414A1 1 0 109 8.586L7.293 10.293A1 1 0 108.707 11.707L10 10.414V13a1 1 0 102 0V9a1 1 0 10-2 0v2.586l-1.293-1.293z"></path>
+                    </svg>
+                    <span>(31) 99551-8294</span>
+                </a>
             </div>
         </div>
     </nav>
+
+    <script>
+        const menuButton = document.getElementById('menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        menuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 
 <!-- FAQ Section -->
 <section class="bg-white py-12">
